[package]
name = "tantivy-jieba"
version = "0.10.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2021"
description = "A library that bridges between tantivy and jieba-rs"
repository = "https://github.com/jiegec/tantivy-jieba"
readme = "README.md"
keywords = ["tantivy", "jieba"]
license = "MIT"

[dependencies]
jieba-rs = "0.7.0"
lazy_static = "1.4.0"
#tantivy-tokenizer-api = "0.3.0"
tantivy-tokenizer-api = { git = "https://github.com/b41sh/tantivy", rev = "a63b0d3c19285f700557e3a1d5cf98353d656416" }

[dev-dependencies]
tantivy = "0.22.0"
