[package]
name = "tantivy-jieba"
version = "0.11.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2021"
description = "A library that bridges between tantivy and jieba-rs"
repository = "https://github.com/jiegec/tantivy-jieba"
readme = "README.md"
keywords = ["tantivy", "jieba"]
license = "MIT"

[dependencies]
jieba-rs = "0.7.0"
lazy_static = "1.4.0"
tantivy-tokenizer-api = { git = "https://github.com/b41sh/tantivy", rev = "d7a686c9648e7706ce5a07e93497b09cae5cf7b3", package="tantivy-tokenizer-api" }
[dev-dependencies]
tantivy = "0.22.0"
